Fixed strange chrome-exclusive alignment error

--- a/client/src/components/DetailedView/DetailedViewLayout.css
+++ b/client/src/components/DetailedView/DetailedViewLayout.css
@@ -34,7 +34,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 5em;
+    gap: 4em;
 }
 
 .item-info {
@@ -55,8 +55,7 @@
 }
 
 @media (max-width: 1000px) {
-    .detailed-view, .detailed-view > .item-info-container > *, .carousel-root {
-        flex-direction: column;
+    .detailed-view, .detailed-view > .item-info-container > *, .carousel-root { 
         width:80vw;
     }
     
